crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__component_isolation_tests__input_area_tests__input_area_normal_mode_ansi.snap
---
source: crates/crucible-cli/src/tui/oil/tests/component_isolation_tests.rs
assertion_line: 385
expression: ansi.clone()
---
[38;2;50;54;62m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄[39m
[48;2;50;54;62m > [49m[48;2;50;54;62mhello[49m[48;2;50;54;62m                                                                        [49m
[38;2;50;54;62m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀[39m
